2010-11-13  Benjamin Mack  <benni@typo3.org>

	* Added feature: New option "noScale" for getImgResource() to display the original image instead of a scaled one (Thanks to Stefan Geith)
	* Fixed bug #7855: IRRE doesn't save collapse/expand state of nested IRRE records
	* Fixed bug #9508: Workspace preview link should work in multidomain-environments (Thanks to Michael Klapper)
	* Added feature #13170: Workspace Owners should be manageable with groups as well (Thanks to Tolleiv Nietsch)

2010-11-12  Steffen Kamper  <steffen@typo3.org>

	* Added feature #16315: New extension manager part 1: splitting classes

2010-11-12  Ingo Renner  <ingo@typo3.org>

	* Added feature #16337: System health status self monitoring
	* Added feature #16338: Scheduler task to regularly execute the status report checks

2010-11-12  Steffen Gebert  <steffen@steffen-gebert.de>

	* Added feature #16357: visualize beeing in an workspace by coloring the topbar (Thanks to Lars Zimmermann)

2010-11-12  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #16370, Follow-up to #15094: SVG TypoScript object unuseable after tslib_content splitup
	* Fixed bug #15456: Changes made by ColorPicker Wizard are not saved (Thanks to Tobias Hoevelborn)
	* Fixed bug #6001: Install Tool image tests fail when there are spaces in the path name of im_path, and auto-detection of IM under Windows improved

2010-11-12  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #16365: htmlArea RTE: Delete compressed files when clearing RTE cache
	* Fixed bug #16347: htmlArea RTE: PHP Warning: Invalid argument supplied for foreach() in ext_tables.php

2010-11-11  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16361: Javascript returns 'FALSE' instead of 'false' in class.tslib_content.php (Thanks to Krystian Szymukowicz)
	* Fixed bug #16307: Remove Workspace Module and Autopublishing from the system extension Version (Thanks to Tolleiv Nietsch)