@@ -1,0 +1,81 @@
+<?php
+/***************************************************************
+*  Copyright notice
+*
+*  (c) 2010 Ernesto Baschny <ernst@cron-it.de>
+*  All rights reserved
+*
+*  This script is part of the TYPO3 project. The TYPO3 project is
+*  free software; you can redistribute it and/or modify
+*  it under the terms of the GNU General Public License as published by
+*  the Free Software Foundation; either version 2 of the License, or
+*  (at your option) any later version.
+*
+*  The GNU General Public License can be found at
+*  http://www.gnu.org/copyleft/gpl.html.
+*  A copy is found in the textfile GPL.txt and important notices to the license
+*  from the author is found in LICENSE.txt distributed with these scripts.
+*
+*
+*  This script is distributed in the hope that it will be useful,
+*  but WITHOUT ANY WARRANTY; without even the implied warranty of
+*  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+*  GNU General Public License for more details.
+*
+*  This copyright notice MUST APPEAR in all copies of the script!
+***************************************************************/
+
+/**
+ * Contains the update class for transitioning from ".gif" flags to sprites
+ *
+ * @author Ernesto Baschny <ernst@cron-it.de>
+ * @version $Id$
+ */
+class tx_coreupdates_flagsfromsprite {
+	public $versionNumber;	// version number coming from t3lib_div::int_from_ver()
+
+	/**
+	 * Checks if an update is needed
+	 *
+	 * @param	string		&$description: The description for the update
+	 * @return	boolean		whether an update is needed (true) or not (false)
+	 */
+	public function checkForUpdate(&$description) {
+		$result = FALSE;
+		$description = 'Removes the ".gif" suffix from entries in sys_language, because flags now come from a sprite provided by t3skin and not individual .gif files.';
+
+		if ($this->versionNumber >= 4005000) {
+			$res = $GLOBALS['TYPO3_DB']->exec_SELECTquery('uid', 'sys_language', 'flag LIKE \'%.gif\'', '', '', '1');
+			if($GLOBALS['TYPO3_DB']->sql_num_rows($res)) {
+				$result = TRUE;
+			}
+			$GLOBALS['TYPO3_DB']->sql_free_result($res);
+		}
+		return $result;
+	}
+
+
+	/**
+	 * Performs the database update. Changes the flags from ".gif" to flag without suffix
+	 *
+	 * @param	array		&$dbQueries: queries done in this update
+	 * @param	mixed		&$customMessages: custom messages
+	 * @return	boolean		whether it worked (true) or not (false)
+	 */
+	public function performUpdate(&$dbQueries, &$customMessages) {
+		$result = FALSE;
+		if ($this->versionNumber >= 4005000) {
+			$sql = 'UPDATE sys_language SET flag=REPLACE(flag, \'.gif\', \'\') WHERE flag LIKE \'%.gif\'';
+			$res = $GLOBALS['TYPO3_DB']->sql_query($sql);
+			$dbQueries[] = $sql;
+
+			if ($GLOBALS['TYPO3_DB']->sql_error()) {
+				$customMessages = 'SQL-ERROR: ' . htmlspecialchars($GLOBALS['TYPO3_DB']->sql_error());
+			} else {
+				$result = TRUE;
+			}
+		}
+		return $result;
+	}
+}
+?>
